styles/base.css
.grid-body{
    display: grid;
    grid-template-columns: auto;
    grid-template-rows:12fr;
    justify-content: center;
}

header{
    display: grid;
    grid-template-columns: auto;
    grid-template-rows: 2fr;
    grid-row:1/2;
    border-top: solid medium white;
    border-bottom: solid medium white;
    padding: 30px;
    justify-content: center;
    background-color: rgb(44, 109, 199);
    
}
.text{
    text-align: center;
    font-family: 'IBM Plex Sans', sans-serif;
    color: white;
    text-decoration: none;


}
header h1{
    grid-row: 1;
    grid-column: auto;
  
}

img{
    grid-row: 2;
    grid-column: auto;
    width: 300px;
    height: min-content;
    box-shadow: 10px 5px 5px rgb(2, 3, 89);
}

nav{
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 5fr;
    justify-items: center;
    /* gap: 30px;
    padding: 30px; */
    font-family: 'IBM Plex Sans', sans-serif;
    border-bottom: solid medium white;
    background-color: rgb(5, 32, 84);
    z-index: 1;
}


ul a:hover{

color: black;

}
main{
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 4fr;
    justify-items: center;
    padding: 30px;
    border-bottom: solid medium white;
    background-color: rgb(44, 109, 199);
    gap: 30px;
}  

.card{
    width: 250px;
    background: linear-gradient(0.50turn, #f5f1d4, rgb(44, 109, 199));
    box-shadow:2px 2px 2px rgb(2, 3, 89) ;
}

footer{

    display: grid;
    grid-template-columns: 2fr;
    grid-template-rows: 2fr;
    background-color: rgb(44, 109, 199);
    align-items: center;
}   

.current-year{
    grid-row: 1;
    grid-column: 1/2;
    padding: 0px;



}

#lastModified{
    grid-row: 2;
    grid-column: 1/3;
    padding: 0px;
    justify-self: center;
}

.mp4{

    width: 150px;
    height: auto;
    grid-row: 1;
    grid-column: 2/2;
    justify-self: right;
}
/* CSS FOR HAMBURGER BOTTON */
/* small view navigation */
#menu{
    background-color: rgb(44, 109, 199);
	font-size: 1.5rem;
    border: none;
    color: white;


}
#menu::before {
	content: "MENU";
    
}

#menu.open::before {
	content: "CLOSE";
}
#menu:hover{
    color: rgb(250, 198, 28);
}

.navigation {
	display: flex;
	flex-direction: column;
	list-style: none;
}

.navigation a {
	display: none;
	padding: 1rem;
	text-align: center;
	text-decoration: none;
	color: #fff;
}
.navigation a:hover{
    color: rgb(250, 198, 28);    
}
/* when the button is clicked - the open class is toggled (added/removed) */
.open a {
	display: block;
}

